Let SimpleJobRepository#deleteJobInstance delete corresponding step executions
Resolves #4382